# yukina

./: LICENSE  README.md  main.py  pyproject.toml
agents/: example.json  gcr.json  general.json
src/: agent.py  cli.py  connection_manager.py  helpers.py
src/analysis/: market_analyzer.py  signal_generator.py  trend_detector.py
src/connections/: anthropic_connection.py  base_connection.py  openai_connection.py  twitter_connection.py
src/market/: market_insights.py
src/models/: market_data.py  trading_signal.py
src/portfolio/: portfolio_tracker.py
src/risk/: risk_manager.py
src/trading/: trading_system.py
src/utils/: data_fetcher.py  signal_optimizer.py
